# predicting_heart_disease

./: .env.example  .gitignore  IMPROVEMENT_PLAN.md  README.md  config_switcher.py  go.work  heart_disease_improvements.py  main.py  package.json  pyproject.toml  requirements.txt  run_improvements.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
data/: README.md
docs/: Competition.md  Log.md  Paper.md  Score.md  Setup.md  analyze.md
nb/: 000_eda.ipynb  001_eda.ipynb  002_eda.ipynb  003_eda.ipynb  004_catboost.ipynb  005_catboost_optimized.ipynb  006_catboost_features.ipynb  007_catboost_features.ipynb  008_catboost_features.ipynb  009_nb.ipynb  010_remove_age_cholesterol.ipynb  011_minimum_features.ipynb  012_prevent_overfitting.ipynb  013_multiple-models-for-eda-lb-0-95371.ipynb  014_non_leak_stacking.ipynb  015_real_mlp.ipynb  016_real-mlp.ipynb  018_.ipynb  018_improved.ipynb  019_data_analysis.ipynb  019_numeric_or_categorical.ipynb  020_realmlp_hyperparameter_optimization.ipynb  021_realmlp_hyperparameter_optimization_logged.ipynb  022_realmlp_hyperparameter_optimization_heavy.ipynb  023_realmlp_hyperparameter_optimization_seed_bagging.ipynb  024_realmlp_hyperparameter_optimization_no_random_search copy.ipynb  025_real_hyperparameter.ipynb  025_real_hyperparameter_comparison.ipynb  026_real_hyperparameter.ipynb  027_real_hyperparameter_with_early_stopping.ipynb  028_real_hyperparameter_with_external_tata.ipynb  029_real_hyperparameter_target_distribution.ipynb  030_real_hyperparameter_seed_bugging.ipynb  031_real_hyperparameter_seed_bugging.ipynb  (+20 more)
(+59 files in other folders)
