[project]
name = "kaggle-pacakge"
version = "0.1.0"
description = "Starter template for Kaggle and ML competitions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.7.4.5",
    "kagglehub>=0.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
