[project]
name = "kaggle-pacakge"
version = "0.1.0"
description = "Starter template for Kaggle and ML competitions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=7.1.0",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "ruff>=0.15.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "xgboost>=3.1.3",
]
